# SynQc-Temporal-Dynamic-System

./: 00_ReadMe_Briefing.md  Greeting and update exchange.html README SynQc.html  Greeting and update exchange.html SynQc core.html  Greeting and update exchange.html SynQc example.html  Greeting and update exchange.html SynQc hardware.html  Greeting and update exchange.html SynQc plant.html  Greeting and update exchange.html SynQc py.class.html  Greeting and update exchange.html SynQc py.html  Greeting and update exchange.html SynQc pysnpt.html  Greeting and update exchange.html SynQc readme..html  Greeting and update exchange.html SynQc src.html  Greeting and update exchange.html SynQc.html  Greeting and update exchange.html SynQc3.html  Greeting and update exchange.html cycles.html  Greeting and update exchange.html quick start.html  Greeting and update exchange.html yaml.html  README.md  SynQc_PreRepo_Readiness_v0_2_2025-11-10_2210.md
synqc-temporal-dynamics/: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  pyproject.toml  requirements.txt  setup.cfg
synqc-temporal-dynamics/.github/workflows/: ci.yml
synqc-temporal-dynamics/examples/: simulate_dpd.py
synqc-temporal-dynamics/scripts/: windows_quickstart.bat
synqc-temporal-dynamics/synqc/: __init__.py  adapt.py  demod.py  hardware.py  mathkern.py  probes.py  rng.py  scheduler.py
synqc-temporal-dynamics/synqc_temporal_dynamics_live/: README.md
synqc-temporal-dynamics/tests/: conftest.py  test_demod.py  test_probes.py  test_scheduler.py
synqc-temporal-dynamics/utils/: install_deps.py
(+25 files in other folders)
